// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Petstore can do a GET 1`] = `
Object {
  "stderr": "",
  "stdout": "Status: 200
{
  \\"id\\": 1,
  \\"name\\": \\"doggie\\"
}
",
}
`;

exports[`Petstore can do a PUT 1`] = `
Object {
  "stderr": "",
  "stdout": "Status: 200
{
  \\"id\\": 10,
  \\"name\\": \\"test\\",
  \\"status\\": \\"available\\"
}
",
}
`;

exports[`Petstore debug prints 1`] = `
Object {
  "stderr": "",
  "stdout": "GET http://localhost:3123/pet/10
Accept: */*
",
}
`;

exports[`Petstore lists categories 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "Usage: petstore [options] [command]

Options:
  -p, --print <mode>     Print the HTTP request instead of sending it.
                         (choices: \\"curl\\", \\"plain\\")
  -v, --verbose          Includes the response headers in the output
  -s, --server <server>  Base URL to use for requests
  -a, --auth <auth>      Authorization header to send
  -h, --help             display help for command

Commands:
  pet                    Everything about your Pets
  store
  user                   Operations about user
  help [command]         display help for command
",
}
`;

exports[`Petstore lists commands 1`] = `
Object {
  "code": 1,
  "stderr": "",
  "stdout": "Usage: petstore pet [options] [command]

Everything about your Pets

Options:
  -h, --help                           display help for command

Commands:
  updatePet [options] <body>           Update an existing pet
  addPet [options] <body>              Add a new pet to the store
  findPetsByStatus [options]           Finds Pets by status
  findPetsByTags [options]             *DEPRECATED* Finds Pets by tags
  getPetById <petId>                   Find pet by ID
  updatePetWithForm [options] <petId>  Updates a pet in the store with form
                                       data
  deletePet [options] <petId>          Deletes a pet
  uploadFile [options] <petId>         uploads an image
  help [command]                       display help for command
",
}
`;

exports[`Petstore prints --help on a PUT 1`] = `
Object {
  "stderr": "",
  "stdout": "Usage: petstore pet updatePet [options] [command] <body>

Update an existing pet by Id

Arguments:
  body                    Path to a file containing the request body.

Options:
  --body-type <bodyType>  Content type of the request body. (choices:
                          \\"application/json\\", \\"application/xml\\",
                          \\"application/x-www-form-urlencoded\\", default:
                          \\"application/json\\")
  -h, --help              display help for command

Commands:
  examples
",
}
`;

exports[`Petstore prints a curl GET request 1`] = `
Object {
  "stderr": "",
  "stdout": "curl -X GET -H 'Accept: */*' 'http://localhost:3123/pet/10'
",
}
`;

exports[`Petstore prints a curl POST request 1`] = `
Object {
  "stderr": "",
  "stdout": "curl -X POST -H 'Authorization: Bearer mytoken' -H 'Content-Type: application/json' -H 'Accept: */*' 'http://localhost:3123/pet' -d '{\\"id\\":1,\\"name\\":\\"doggie\\"}'
",
}
`;

exports[`Petstore prints examples 1`] = `
Object {
  "stderr": "",
  "stdout": "Example for application/json:
{
  [36m\\"id\\"[39m: [32m10[39m,
  [36m\\"name\\"[39m: [31m\\"doggie\\"[39m,
  [36m\\"category\\"[39m: {
    [36m\\"id\\"[39m: [32m1[39m,
    [36m\\"name\\"[39m: [31m\\"Dogs\\"[39m
  },
  [36m\\"photoUrls\\"[39m: [
    [31m\\"string\\"[39m
  ],
  [36m\\"tags\\"[39m: [
    {
      [36m\\"id\\"[39m: [32m0[39m,
      [36m\\"name\\"[39m: [31m\\"string\\"[39m
    }
  ],
  [36m\\"status\\"[39m: [31m\\"available\\"[39m
}
Example for application/xml:
{
  id: 10,
  name: 'doggie',
  category: { id: 1, name: 'Dogs' },
  photoUrls: [ 'string' ],
  tags: [ { id: 0, name: 'string' } ],
  status: 'available'
}
Example for application/x-www-form-urlencoded:
{
  id: 10,
  name: 'doggie',
  category: { id: 1, name: 'Dogs' },
  photoUrls: [ 'string' ],
  tags: [ { id: 0, name: 'string' } ],
  status: 'available'
}
",
}
`;
